--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Encurtador de URL</title>
 </head>
 
 <body>
 
-    <div></div>
+    <div id="box-main">
         <main>
             <h1>Encurtador de URL</h1>
 
-            <button>LOGO</button>
+            <button type="button" class="big-button">LOGO</button>
 
             <form>
                 <input type="text" placeholder="URL A SER ENCURTADA">
 
-                <input type="submit" placeholder="ENCURTAR">
+                <button type="submit" class="big-button">ENCURTAR</button>
             </form>
         </main>
+
+    <footer>
+        <span>MACH1 - Copyright © 2023</span>
+    </footer>
     </div>
 
     <script src="/js/script.js"></script>
