--- a/index.html
+++ b/index.html
@@ -17,23 +17,86 @@
 
             <button type="button" id="btn-settings"><img src="/assets/icons/settings.svg" alt="settings"></button>
 
-            <button type="button" class="big-button invert">LOGO</button>
+            <button type="button" class="big-button invert" id="btn-logo">LOGO</button>
 
-            <form>
-                <input type="text" placeholder="URL TO SHORT">
+            <div id="box-initial">
+                <input type="text" placeholder="URL TO SHORT" id="inserted-url">
 
-                <button type="button" class="big-button" id="btn-shortURL"><img src="/assets/icons/link.svg" alt="link"></button>
-            </form>
+                <button type="button" class="big-button" id="btn-shortURL"><img src="/assets/icons/link.svg"
+                        alt="link"></button>
+            </div>
+
+            <div id="box-manage-links">
+
+                <h2>Manage Links</h2>
+                <span>Domain: INSERIR O DOMÍNIO</span>
+
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Short Link
+                            </th>
+                            <th>Original Link
+                            </th>
+                            <th>Date
+                            </th>
+                            <th>Action
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody id="table-body">
+                        <tr>
+                            <td>link encurtado</td>
+                            <td>link original</td>
+                            <td>06/05/2023 07:47:32</td>
+                            <td>
+                                <button><img src="/assets/icons/edit.svg" alt="edit"></button>
+                                <button><img src="/assets/icons/delete.svg" alt="delete"></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>link encurtado</td>
+                            <td>link original</td>
+                            <td>06/05/2023 07:47:32</td>
+                            <td>
+                                <button><img src="/assets/icons/edit.svg" alt="edit"></button>
+                                <button><img src="/assets/icons/delete.svg" alt="delete"></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>link encurtado</td>
+                            <td>link original</td>
+                            <td>06/05/2023 07:47:32</td>
+                            <td>
+                                <button><img src="/assets/icons/edit.svg" alt="edit"></button>
+                                <button><img src="/assets/icons/delete.svg" alt="delete"></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>link encurtado</td>
+                            <td>link original</td>
+                            <td>06/05/2023 07:47:32</td>
+                            <td>
+                                <button><img src="/assets/icons/edit.svg" alt="edit"></button>
+                                <button><img src="/assets/icons/delete.svg" alt="delete"></button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
             <div id="box-functions">
                 <div id="box-link">
-                    <h2>AQUI VAI FICAR O LINK</h2>
+                    <h2 id="link-displayed">AQUI VAI FICAR O LINK</h2>
                     <span>Link criado em: dd/mm/aaaa às 00:00:00</span>
                 </div>
                 <div id="box-buttons">
-                    <button type="button" class="big-button"><img src="/assets/icons/copy.svg">COPY</button>
-                    <button type="button" class="big-button" id="btn-share"><img src="/assets/icons/share.svg">SHARE</button>
-                    <button type="button" class="big-button" id="btn-create-qrcode"><img src="/assets/icons/qrCode.svg">QR CODE</button>
+                    <button type="button" class="big-button" id="btn-copy"><img
+                            src="/assets/icons/copy.svg">COPY</button>
+                    <button type="button" class="big-button" id="btn-share"><img
+                            src="/assets/icons/share.svg">SHARE</button>
+                    <button type="button" class="big-button" id="btn-create-qrcode"><img
+                            src="/assets/icons/qrCode.svg">QR CODE</button>
                 </div>
                 <div id="box-social-medias">
                     <button id="btn-share-linkedin"><img src="/assets/icons/linkedin.svg"></button>
@@ -41,8 +104,8 @@
                     <button id="btn-share-twitter"><img src="/assets/icons/twitter.svg"></button>
                 </div>
                 <div id="box-send-link">
-                        <input type="text" placeholder="(00) 0 0000 0000">
-                        <button type="submit" class="big-button"><img src="/assets/icons/share.svg"></button>
+                    <input type="text" placeholder="(00) 0 0000 0000">
+                    <button type="submit" class="big-button"><img src="/assets/icons/share.svg"></button>
                 </div>
 
                 <div id="box-msg">
@@ -57,7 +120,7 @@
         </footer>
     </div>
 
-    <script src="/js/script.js"></script>
+    <script src="/js/script.js" type="module"></script>
 </body>
 
 </html>
